# wf-pose-engine

./: .env.template  .gitignore  LICENSE  README.md  drone.yml  justfile  kube_job.yml  package-lock.json  package.json  pylintrc  pyproject.toml  stack.yml
configs/tensorrt/_base_/: base_static.py
deployment/mongo/: init.js  mongo.dockerfile
deployment/pose-engine/: pose-engine.dockerfile
migrate-mongo/: migrate-mongo-config.js
migrate-mongo/migrations/: 20231107220511-pose_2d_collection.js  20231206220050-pose_3d_collection.js  20231209230513-pose_track_3d_collection.js  20231210201459-addl_pose_track_structures.js
pose_engine/: __init__.py  __main__.py  cli.py  config.py  core.py  known_inference_models.py  log.py  pipeline.py  process_detection.py  process_pose_estimation.py  process_status_poll.py  process_store_poses.py  util.py
pose_engine/handle/: __init__.py  handle.py  pose_2d.py
pose_engine/honeycomb_service/: __init__.py  client.py
pose_engine/inference/: __init__.py  detector.py  pose_estimator.py
pose_engine/loaders/: __init__.py  bounding_boxes_dataloader.py  bounding_boxes_dataset.py  poses_dataloader.py  poses_dataset.py  rtmo_images_dataloader.py  rtmo_images_dataset.py  video_frames_dataloader.py  video_frames_dataset.py
pose_engine/mmlab/: __init__.py
pose_engine/mmpose/: misc.py  transforms.py
pose_engine/pipeline/: video_frames_dataloader.py  video_frames_dataset.py
pose_engine/torch/: distributed_data_parallel.py  mmlab_compatible_data_parallel.py
pose_engine/video/: __init__.py  fetch.py
scripts/: overlay_poses.py  pose_inference_demo.py  run_pose_inference_demo.py
tests/pipline/: test_video_frames_dataset.py
(+14 files in other folders)
