[tool.poetry]
name = "wf-pose-engine"
version = "0.1.0"
description = ""
authors = ["btalberg <ben.talberg@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.1.0"
torchvision = "^0.16.0"
openmim = "^0.3.9"
mmpose = "^1.2.0"
mmdet = "^3.2.0"
click = "^8.1.7"
pydantic = "^2.4.2"
click-log = "^0.4.0"
python-dotenv = "^1.0.0"
wf-cv-utils = "^3.6.1"

[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
pylint = "^3.0.2"
pytest = "^7.4.2"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
pythonpath = "."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
