[tool.poetry]
name = "wf-pose-engine"
version = "0.1.0"
description = ""
authors = ["btalberg <ben.talberg@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.12"
torch = "^2.2.0"
torchvision = "^0.17.0"
openmim = "^0.3.9"
mmpose = "^1.3.1"
mmdet = "^3.3.0"
click = "^8.1.7"
pydantic = "^2.4.2"
click-log = "^0.4.0"
python-dotenv = "^1.0.0"
wf-cv-utils = "^3.6.1"
wf-video-io = "^3.4.3"
platformdirs = "^3.11.0"
pydantic-settings = "^2.0.3"
pymongo = "^4.6.0"
wf-pose-db-io = "^0.1.3"
mmdeploy = "^1.3.0"
python-dateutil = "^2.8.2"
numba = "^0.59.0"
onnxruntime-gpu = "^1.17.1"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
pylint = "^3.0.2"
pytest = "^7.4.2"
yappi = "^1.6.0"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
pythonpath = "."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
